cmss/main/default/objects/NonLifeInsuranceOtherObject__c/NonLifeInsuranceOtherObject__c.object-meta.xml
<CustomObject>
    <label>Non Life Insurance Other Object</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non Life Insurance Other Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>