cmss/main/default/objects/NonLifeInsuranceOtherObject__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <formula>ObjectID__r.Asset__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset</label>
    <type>Text</type>
</CustomField>