cmss/main/default/objects/NonLifeInsuranceOtherObject__c/fields/ClientID__c.field-meta.xml
<CustomField>
    <fullName>ClientID__c</fullName>
    <label>Client Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>