cmss/main/default/objects/NonLifeInsuranceOtherObject__c/fields/HouseholdInsuranceAmount__c.field-meta.xml
<CustomField>
    <fullName>HouseholdInsuranceAmount__c</fullName>
    <label>Household Insurance Amount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>