cmss/main/default/objects/NonLifeInsuranceOtherObject__c/fields/ObjectID__c.field-meta.xml
<CustomField>
    <fullName>ObjectID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Object ID</label>
    <referenceTo>NonLifeInsuranceObject__c</referenceTo>
    <relationshipLabel>Non Life Insurance Other Objects</relationshipLabel>
    <relationshipName>NonLifeInsuranceOtherObjects</relationshipName>
    <type>Lookup</type>
</CustomField>