cmss/main/default/objects/NonLifeInsuranceOtherObject__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <label>Serial Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>